Build for production

--- a/contact/index.html
+++ b/contact/index.html
@@ -27,6 +27,8 @@
 <div class="form-group">
 <label class="form-control">Nachricht</label>
 <textarea name="text" col="3" rows="6"></textarea>
+<input type="hidden" name="*honeypot" />
+<input type="hidden" name="*redirect" value="/danke" />
 <input class="form-control" type="submit" value="Kontaktieren">
 </div>
 
