--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <p><em><a href="https://dev.to/martin_betz">Texte</a></em> > Über IT und Bildung</p>
     </main>
     <footer>
-        Impressum | Datenschutz
-    </footer>
+        <a href="/impressum">Impressum</a>
+            </footer>
     </body>
 </html>
