--- a/impressum/index.html
+++ b/impressum/index.html
@@ -14,26 +14,18 @@
     </header>
     <main>
         
-<p><em>Contact</em> > Via Formular</p>
+<p><em>Impressum</em></p>
 
-<div class="form">
-<form action="https://www.enformed.io/cd2f1o4l" method="POST" >
+<h2>Angaben gemäß § 5 TMG:</h2>
+<p>Martin Betz<br />
+c/o Factory Berlin<br />
+Rheinsberger Straße 76/77<br />
+10115 Berlin
+</p>
 
-<div class="form-group">
-<label class="form-control">E-Mail</label>
-<input name="e-mail" type="email" class="form-control"/>
-</div>
+<h2>Kontakt:</h2>
+<a href="/contact">Kontakt über Formular</a>
 
-<div class="form-group">
-<label class="form-control">Nachricht</label>
-<textarea name="text" col="3" rows="6"></textarea>
-<input type="hidden" name="*honeypot" />
-<input type="hidden" name="*redirect" value="/danke" />
-<input class="form-control" type="submit" value="Kontaktieren">
-</div>
-
-</form>
-</div>
 
     </main>
     <footer>
